[package]
name = "zk-time-capsule-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "FileReader"] }

[profile.release]
opt-level = 3
