[package]
name = "zk-time-capsule-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "f4c1b3e" } # Замените на актуальный хэш
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "FileReader"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
